--- a/css/style.css
+++ b/css/style.css
@@ -270,15 +270,17 @@ h1 {
     text-align: center;
     text-shadow: 7px 7px 13px rgba(0, 0, 0, 0.212);
     margin-bottom: 10px;
+    border-radius: 10px;
 }
 
 h2 {
     text-shadow: 5px 5px 8px rgba(0, 0, 0, 0.295);
     margin-bottom: 10px;
+    border-radius: 10px;
 }
 
 h3 {
-
+    border-radius: 10px;
     margin-bottom: 10px;
 }
 
@@ -289,6 +291,10 @@ pre {
 p {
     text-indent: 15px;
     margin-bottom: 10px;
+}
+
+p.pre {
+    text-align: left;
 }
 
 ul > li > ul {
@@ -311,17 +317,28 @@ a.externo::after {
     content: '\1F517';
 }
 
-div#titulodiv {
+div#titulo-div {
     text-align: center;
     background-color: rgba(128, 128, 128, 0.589);
 }
 
+div#titulo-div:hover {
+    background-color: #14DADE;
+    border-radius: 5px;
+}
+
 div.id {
+    background-color: var(--cor4);
     display: inline-block;
     border: 1px solid black;
     text-align: center;
     height: 200px;
     width: 200px;
+    border-radius: 10px;
+}
+
+div.id:hover {
+    background-color: var(--cor2);
 }
 
 .ex1 {
@@ -331,7 +348,7 @@ div.id {
 
 .ex1:hover {
     background-color: #146fde00;
-    color: #1470DE;
+    color: var(--cor4);
 }
 
 .ex1 > p {
@@ -340,9 +357,11 @@ div.id {
 
 .ex1:hover > p {
     color: aliceblue;
-    background-color: #146fde54;
+    background-color: var(--cor4);
     display: block;
     width: 233px;
+    border-radius: 10px;
+    padding: 5px;
 }
 
 footer {
