--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,17 @@ picture {
     margin-bottom: 10px;
 }
 
+div.fotomy {
+    width: 150px;
+    display: inline-block;
+    right: 70%;
+}
+
+div.img-qr {
+    width: 150px;
+    display: inline-block;
+}
+
 div.video {
     background-color: var(--cor5);
     margin: 0px -20px 30px -20px;
