--- a/css/style.css
+++ b/css/style.css
@@ -136,17 +136,25 @@ nav {
 }
 
 nav > a {
-    color: white;
+    background-color: var(--cor4);
+    color: rgb(255, 255, 255);
     padding: 10px;
     text-decoration: none;
     font-weight: bold;
-    border-radius: 5px;
-    transition-duration: 0.3s;
+    border-radius: 20px;
+    transition-duration: 0.1s;
 }
 
 nav > a:hover {
-    background-color: var(--cor3t1);
-    color: var(--cor5)
+    background-color: var(--cor2);
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    border-radius: 17px;
+}
+
+nav > a:active {
+    border-radius: 5px;
+    color: rgb(255, 255, 255);
 }
 
 main {
