--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ div.id:hover {
 }
 
 footer {
-    background-image: linear-gradient(to right, #7c7c7c, black);
+    background-image: linear-gradient(to right, #7c7c7c, rgb(58, 58, 58));
     color: white;
     text-align: center;
     font-size: 0.8em;
