--- a/des12/estilo/style.css
+++ b/des12/estilo/style.css
@@ -1,24 +1,42 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --f1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --f3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--f1);
 }
 
 header {
+    padding-top: 45px;
+    padding-bottom: 45px;
     background-color: black;
     color: white;
     text-align: center;
-}
+}    
 
 header > h1 {
-    padding-top: 50px;
+    
+    
     text-transform: uppercase;
+    font-family: var(--font2);
+    font-size: 6.3vw;
+
 }
 
 header > p {
@@ -40,6 +58,8 @@ padding-top: 10vh;
 padding-bottom: 10vh;
 line-height: 2em;
 padding-left: 30px;
+font-family: var(--f3);
+font-size: 3.5vw;
 }
 
 section.normal {
@@ -53,7 +73,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.342);
 }
 
