--- a/css/style.css
+++ b/css/style.css
@@ -111,12 +111,10 @@ video.vsimples > video {
 }
 
 header {
-    background-position: center center;
-    background-repeat: no-repeat;
+    background: rgb(102, 100, 100) url('../imagens/fundo-preto-background114-1024x640.png') center center no-repeat fixed;
     background-size: cover;
-    background-image: url('../imagens/fundo-preto-background114-1024x640.png');
-    background-color: #b1b1b1e3;
     min-height: 150px;
+    
     text-align: center;
     padding-top: 40px;
 }
@@ -148,8 +146,14 @@ header > p {
 
 nav {
     background-color: black;
+    background-image: url('../imagens/fundo-preto-background114-1024x640.png');
+    background-position: bottom center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     padding: 15px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.349);
+
 }
 
 nav > a {
@@ -158,10 +162,12 @@ nav > a {
     background-color: #316d8d;
     color: rgb(255, 255, 255);
     padding: 10px;
+    text-align: justify;
     text-decoration: none;
     font-weight: bold;
     border-radius: 20px;
     transition-duration: 0.1s;
+
 }
 
 nav > a:hover {
@@ -190,6 +196,7 @@ main {
     max-width: 1000px;
     margin: auto;
     margin-bottom: 30px;
+    
 }
 
 main img {
@@ -448,7 +455,13 @@ div.id:hover {
 }
 
 footer {
-    background-image: linear-gradient(to right, #7c7c7c, rgb(58, 58, 58));
+    background-color: black;
+    background-image: url('../imagens/fundo-preto-background114-1024x640.png');
+    background-position: bottom center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
     color: white;
     text-align: center;
     font-size: 0.8em;
