--- a/css/style.css
+++ b/css/style.css
@@ -80,10 +80,11 @@ div.disc {
 
 div.video {
     background-color: #000000a8;
-    margin: 0px -20px 30px -20px;
-    padding: 20px;
-    padding-bottom: 59%;
+    margin: 0px -10px 30px -20px;
+    padding: 50px;
+    padding-bottom: 60vh;
     position: relative;
+    margin-left: -10px;
 }
 
 div.video > video {
@@ -95,11 +96,14 @@ div.video > video {
 }
 
 video.vsimples {
-    background-color: #000000b8;
-    margin: 0px -20px 30px -20px;
-    padding: none;
-    padding-bottom: none;
+    background-color: #000000a8;
+    margin: 0px 0px 0px 0px;
+    padding-top: 10%;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-bottom: 10%;
     position: relative;
+    margin-left: 0px;
 }
 
 video.vsimples > video {
