--- a/des12/estilo/style.css
+++ b/des12/estilo/style.css
@@ -113,7 +113,7 @@ section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.493);
-    background-image: cover;
+    background-size: cover;
     background-attachment: fixed;
 }
 
