--- a/css/style.css
+++ b/css/style.css
@@ -546,6 +546,8 @@ table {
 td {
     border: 1px solid black;
     padding: 8px;
+    text-align: center; /* alinhamento horizontal */
+    vertical-align: middle; /*alinhamaneto vertical */
 }
 
 
