--- a/des12/estilo/style.css
+++ b/des12/estilo/style.css
@@ -61,6 +61,7 @@ nav {
     background-attachment: fixed;
     padding: 15px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.349);
+    text-align: center;
 }
 
 nav > a {
