--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,14 @@ video.vsimples > video {
     height: 90%;
 }
 
+/* -------------------------------------Iframe------------------------------------- */
+iframe#iframehtml {
+    height: 300px; 
+    width: 100%;
+    border-radius: 5px;
+    box-shadow:black 0px 0px 10px;
+}
+
 /* -------------------------------------header------------------------------------ */
 
 header {
