--- a/pacote-d013/estilo/estilo.css
+++ b/pacote-d013/estilo/estilo.css
@@ -55,10 +55,12 @@ section#redes-sociais img {
     margin: 10px;
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    box-sizing: border-box;
 }
 
 section#redes-sociais img:hover {
     border: 2px solid rgb(211, 211, 211);
     transform: translate(-3px, -3px);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    transition: transform .2s, border .5s;
 }
