--- a/css/style.css
+++ b/css/style.css
@@ -584,6 +584,16 @@ h3 {
     margin-bottom: 10px;
 }
 
+h4 {
+    background-color: #1b283a;
+    color: white;
+    padding: 10px;
+    margin: -10px -10px 0px -10px;
+    margin-bottom: 10px;
+    border-radius: 10px 10px 0px 0px;
+    box-shadow: 0px -3px 5px rgb(0 0 0 / 40%)
+}
+
 pre {
     text-align: justify;
 }
